--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <!-- Main Section -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-8">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <section>
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -73,7 +73,7 @@
                     </div>
                 </section>
             </div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <section>
                     <div class="panel panel-default">
                         <div class="panel-heading">
