--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
     <!-- Main Section -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-8">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <section>
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">About Me</h3>
                         </div>
                         <div class="panel-body">
-                            <img class="col-xs-12 col-sm-4 col-md-12 col-lg-4" src="assets/images/profile.jpg" alt="Elmar Cifuentes">
+                            <img class="col-xs-12 col-sm-12 col-md-4 col-lg-4 img-responsive" src="assets/images/profile.jpg" alt="Elmar Cifuentes">
                             <p>Elmar Cifuentes is an IT and Technical Support manager at Phoenix Audio Technologies. A company that develops audio products for web conferencing applications. He was a business owner in Los Angeles California, providing local computer repair and IT services to small business. He decided to sale his business in 2013 and was offered a fulltime position at Phoenix Audio Technologies when the company relocated to Orange County.<p>
                             <p>Elmar is also a Musician and remains part of a community church band in Los Angeles. Has been playing the piano and synthesizer since the age of 12. Music and work have intruded him into web development for numerous reasons. He often finds the need to simplify data and has managed to do so using Wordpress. Elmar is looking to get a solid foundation on web development and has now enrolled into UCI’s coding bootcamp.</p>
                         </div>
                     </div>
                 </section>
             </div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <section>
                     <div class="panel panel-default">
                         <div class="panel-heading">
