custom css, final touches

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- viewport meta tag, ensure proper rendering and touch zooming  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -80,15 +81,16 @@
                             <h3 class="panel-title">Connect with me</h3>
                         </div>
                         <div class="panel-body">
-                            <a class="col-xs-4" href="https://github.com/elmarcifuentes" target="_blank">
+                            <a class="col-xs-4 social" href="https://github.com/elmarcifuentes" target="_blank">
                             <img src="assets/images/github.png" alt="GitHub" width="50"></a>
-                            <a class="col-xs-4" href="https://www.linkedin.com/in/elmarandoni/" target="_blank">
+                            <a class="col-xs-4 social" href="https://www.linkedin.com/in/elmarandoni/" target="_blank">
                             <img src="assets/images/linkedin.png" alt="Linkedin" width="50"></a>
-                            <a class="col-xs-4" href="https://stackoverflow.com/users/8587095/elmar-cifuentes" target="_blank">
+                            <a class="col-xs-4 social" href="https://stackoverflow.com/users/8587095/elmar-cifuentes" target="_blank">
                             <img src="assets/images/stackoverflow.png" alt="StackOverflow" width="50"></a>
                         </div>
                     </div>
                 </section>
+                <div class="push"></div>
             </div>
         </div>
         <!-- First Row Ends-->
@@ -97,7 +99,7 @@
     <!-- Footer -->
     <footer lass="navbar navbar-default">
         <div class="container-fluid text-center">
-            <p>&copy; Copyright 2017 Elmar Cifuentes</p>
+            &copy; Copyright 2017 Elmar Cifuentes
         </div>
     </footer>
 </body>
