--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- viewport meta tag, ensure proper rendering and touch zooming  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                             <h3 class="panel-title">About Me</h3>
                         </div>
                         <div class="panel-body">
-                            <img class="col-xs-12 col-sm-12 col-md-4 col-lg-4 img-responsive" src="assets/images/profile.jpg" alt="Elmar Cifuentes">
+                            <img class="col-xs-12 col-sm-12 col-md-4 col-lg-4 img-responsive social" src="assets/images/profile.jpg" alt="Elmar Cifuentes">
                             <p>Elmar Cifuentes is an IT and Technical Support manager at Phoenix Audio Technologies. A company that develops audio products for web conferencing applications. He was a business owner in Los Angeles California, providing local computer repair and IT services to small business. He decided to sale his business in 2013 and was offered a fulltime position at Phoenix Audio Technologies when the company relocated to Orange County.<p>
                             <p>Elmar is also a Musician and remains part of a community church band in Los Angeles. Has been playing the piano and synthesizer since the age of 12. Music and work have intruded him into web development for numerous reasons. He often finds the need to simplify data and has managed to do so using Wordpress. Elmar is looking to get a solid foundation on web development and has now enrolled into UCI’s coding bootcamp.</p>
                         </div>
@@ -68,15 +69,16 @@
                             <h3 class="panel-title">Connect with me</h3>
                         </div>
                         <div class="panel-body">
-                            <a class="col-xs-4" href="https://github.com/elmarcifuentes" target="_blank">
+                            <a class="col-xs-4 social" href="https://github.com/elmarcifuentes" target="_blank">
                             <img src="assets/images/github.png" alt="GitHub" width="50"></a>
-                            <a class="col-xs-4" href="https://www.linkedin.com/in/elmarandoni/" target="_blank">
+                            <a class="col-xs-4 social" href="https://www.linkedin.com/in/elmarandoni/" target="_blank">
                             <img src="assets/images/linkedin.png" alt="Linkedin" width="50"></a>
-                            <a class="col-xs-4" href="https://stackoverflow.com/users/8587095/elmar-cifuentes" target="_blank">
+                            <a class="col-xs-4 social" href="https://stackoverflow.com/users/8587095/elmar-cifuentes" target="_blank">
                             <img src="assets/images/stackoverflow.png" alt="StackOverflow" width="50"></a>
                         </div>
                     </div>
                 </section>
+                <div class="push"></div>
             </div>
         </div>
         <!-- First Row Ends-->
@@ -85,7 +87,7 @@
     <!-- Footer -->
     <footer lass="navbar navbar-default">
     	<div class="container-fluid text-center">
-                <p>&copy; Copyright 2017 Elmar Cifuentes</p>
+                &copy; Copyright 2017 Elmar Cifuentes
             </div>
         </footer>
 </body>
